--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="main.js"></script>
 
   <nav id="topMenu">
-    <p id="home">Silverbel</p>
+    <img id="home" src="images/logo.png" alt="Silverbelsmp.ca">
 
     <ul id="listRight">
       <li class="classU"><a href="https://silverbelsmp.ca/" class="textU">Home</a></li>
